[package]
name = "cmsis-sys"
version = "0.1.2"
edition = "2021"
description = "Rust bindings for ARM CMSIS"
repository = "https://github.com/Ludwig-Devices/cmsis-sys"
license = "MIT"
include = [
    "src",
    "Cargo.toml",
    "build.rs",
    "CMakeLists.txt",
    "wrapper.h",
    "CMSIS-DSP/LICENSE",
    "CMSIS-DSP/CMakeLists.txt",
    "CMSIS-DSP/Include",
    "CMSIS-DSP/PrivateInclude",
    "CMSIS-DSP/Source",
    "CMSIS-DSP/LICENSE",
    "CMSIS_5/LICENSE.txt",
    "CMSIS_5/CMSIS/Core",
    "picolibc/CMakeLists.txt",
    "picolibc/newlib",
    "picolibc/cmake",
    "picolibc/picolibc.h.in",
    "picolibc/picolibc.ld.in",
    "picolibc/picolibc.specs.in",
]

[dependencies]

[build-dependencies]
bindgen = "0.68.1"
# Fork is necessary pending merge of https://github.com/rust-lang/cmake-rs/pull/187
cmake = "0.1"

[patch.crates-io]
cmake = { git = "https://github.com/frankplow/cmake-rs", branch = "system-name-generic" }
